remove playlist gap fix

--- a/app/styles/partials/_playlist.scss
+++ b/app/styles/partials/_playlist.scss
@@ -37,22 +37,17 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: $size-current-image;
       z-index: -1;
 
       .thumb {
         @include transition(opacity 0.2s linear);
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: 50% 30%;
+        background-position: 50% 33%;
         height: $size-current-image;
         width: 100%;
         position: absolute;
-
-        &.reflect {
-          top: $size-current-image;
-          transform: scaleY(-1);
-        }
       }
     }
   }
