--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -10,7 +10,7 @@ $color-green: #c4d2c8;
 $color-white: #fff;
 
 // Sizes
-$size-current-image: 180px;
+$size-current-image: 200px;
 
 // Media
 $mobile: new-breakpoint(max-width 640px);
